# Dashboard

./: .gitignore  Installation.md  README.md  app.py  package-lock.json  package.json  read_data.py  requirements.txt  spoof_data.py
canDashboard/: CMakeLists.txt  README.md  canDashboard
dashboard/: .gitignore  README.md  app.py  package-lock.json  package.json  requirements.txt  send_data.py
dashboard/oldComponents/: OldSpeedgauge.tsx
dashboard/src/: App.css  App.tsx
dashboard/src/components/: BatteryImage.tsx  BatteryInside.tsx  CustomSpeedGauge.tsx  DasboardContent.tsx  Dials.tsx  DisplayGauge.tsx  RPMGauge.tsx  Speedgauge.tsx
dashboard/src/components/css/: DisplayGauge.module.css  Layout.module.css
public/: index.html
socketIO/: CMakeLists.txt  README.md  socketIO
socketIO/include/: SimpleClass.h
socketIO/src/: SimpleClass.cpp  main.cpp
src/: App.css  App.tsx
src/components/: Battery.tsx  BatteryInside.tsx  CustomSpeedGauge.tsx  DasboardContent.tsx  PowerIn.tsx  PowerOut.tsx  RPMGauge.tsx
src/components/css/: Battery.module.css  Layout.module.css
src/utils/: circleUtils.ts
